--- a/pets.css
+++ b/pets.css
@@ -34,7 +34,7 @@ h2 {
 }
 
 .bitch {
-  background-image: url();
+  background-color: #b6e0d1;
 }
 
 h3 {
@@ -121,18 +121,23 @@ p {
 }
 
 .abstract {
-  background-image: url(https://cdn.ttgtmedia.com/visuals/ComputerWeekly/Hero%20Images/pets-cats-dogs-adobe-hero.jpg);
   padding: 10px;
   margin-top: 20px;
   width: 100%;
-  background-repeat: no-repeat;
-  background-repeat: repeat-y;
+  
 }
 
 .para1 {
   padding-left: 500px;
   padding-right: 500px;
+  width: 200px;
+	height: 235px;
 }
+.abstract1{
+	background-image: url(para1.jpeg);
+}
+
+
 
 .modal {
   display: block;
