--- a/pets.css
+++ b/pets.css
@@ -1,140 +1,169 @@
-#header-section{
-	background-color: #719177;
-	line-height: 200px;
-	background-image: url(https://catwithmonocle.com/wp-content/uploads/2020/02/ac-new-horizons-nook-pattern-2560x1440-1.jpg);
-	color: black;
-
-}
-.container-fluid{
-	padding: 3% 15%;
+#header-section {
+  background-color: #719177;
+  line-height: 200px;
+  background-image: url(https://catwithmonocle.com/wp-content/uploads/2020/02/ac-new-horizons-nook-pattern-2560x1440-1.jpg);
+  color: black;
 }
 
-.navbar{
-	padding:0 0 4.5rem;
+body {
+  position: relative;
 }
 
-.navbar-brand{
-	font-weight: bold;
-	font-size: 2.5rem;
+.container-fluid {
+  padding: 0% 15%;
 }
 
-.nav-item{
-	padding: 0 18px;
+.navbar-brand {
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
-.nav-link{
-	font-size: 1.2rem;
-	font-weight: medium;
+.nav-item {
+  padding: 0 18px;
 }
 
-h2{
-	font-family: cursive;
-	color: darksalmon;
-	text-align: center;
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: medium;
 }
 
-#bitch{
-	background-image: url();
+h2 {
+  font-family: cursive;
+  color: darksalmon;
+  text-align: center;
 }
 
-h3{
-	text-align: center;
-	font-size: 30px;
-	padding: 10px;
-	margin: 27px;
-	color: #719177;
+.bitch {
+  background-color: #d1e0db;
 }
 
-.sitters{
-	text-align: center;
-	background-color: #97cfbb;
-	margin-top: 20px;
-	
+h3 {
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+  margin: 27px;
+  color: #719177;
 }
 
-h4{
-	color: #719177;
-}
- p{
- 	color: slategray;
-
- }
-
-#services{
-	margin-top: 20px;
+.sitters {
+  text-align: center;
+  background-color: #97cfbb;
+  margin-top: 20px;
 }
 
-#footer{
-	text-align: center;
-	padding: 5px;
-
+h4 {
+  color: #719177;
+}
+p {
+  color: slategray;
 }
 
-.fab fa-instagram{
-	padding: 5px;
-	margin: 5px;
-}
-.fab fa-twitter{
-	padding: 5px;
-	margin: 5px;
-}
-.fas fa-envelope{
-	padding: 5px;
-	margin: 5px;
-}
-.row{
-	text-align: center;
+#services {
+  margin-top: 20px;
 }
 
-#footer{
-	padding: 7% 15%;
-	text-align: center;
+#footer {
+  text-align: center;
+  padding: 5px;
 }
 
-.social-icon{
-	margin: 20px 10px;
+.fab fa-instagram {
+  padding: 5px;
+  margin: 5px;
+}
+.fab fa-twitter {
+  padding: 5px;
+  margin: 5px;
+}
+.fas fa-envelope {
+  padding: 5px;
+  margin: 5px;
+}
+.row {
+  text-align: center;
 }
 
-.acc-bg{
-	background-image: url(https://catwithmonocle.com/wp-content/uploads/2020/02/ac-new-horizons-nook-pattern-2560x1440-1.jpg);
+#footer {
+  padding: 7% 15%;
+  text-align: center;
 }
 
-#theForm{
-color: black;
-diplay: table;
-padding: 25px;
-margin: 20px;
-margin-right: 10px;
-border: solid 3px #97cfbb;
-text-align: right;
-float: left;
-width: 500px;
-}
-.row{
-display: table-row;
-padding: 4px;
-}
-.row label{
-display: table-cell;
-padding: 4px;
-}
-.row input{
-display: table-cell;
-padding: 4px;
+.social-icon {
+  margin: 20px 10px;
 }
 
-.abstract{
-	padding: 10px;
-	margin-top: 20px;
-	width: 100%;
-	align-content: center;
-	top: 0px;
-	bottom: 0px;
+.acc-bg {
+  background-image: url(https://catwithmonocle.com/wp-content/uploads/2020/02/ac-new-horizons-nook-pattern-2560x1440-1.jpg);
 }
 
-.para1{
-	padding-left: 500px;
-	padding-right: 500px;
+#theForm {
+  color: black;
+  /* diplay: table; */
+  padding: 25px;
+  margin: 20px;
+  margin-right: 10px;
+  border: solid 3px #97cfbb;
+  text-align: right;
+  float: left;
+  width: 500px;
+}
+.form-row {
+  display: table-row;
+  padding: 4px;
+}
+.form-row label {
+  display: table-cell;
+  padding: 4px;
+}
+.form-row input {
+  display: table-cell;
+  padding: 4px;
 }
 
+.abstract {
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
 
+.para1 {
+  padding-left: 500px;
+  padding-right: 500px;
+  background-image: url(para1.jpeg);
+}
+.abstract1 {
+  background-image: url(para1.jpeg);
+  text-align: center;
+  color: #333635;
+  font-style: italic;
+  margin: 10px;
+  padding: 10px;
+}
+
+.modal {
+  display: block;
+}
+
+.abstract {
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
+  align-content: center;
+  top: 0px;
+  bottom: 0px;
+}
+
+.hidden {
+  display: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
